# C-Generic-List

./: CMakeLists.txt  README.md  main.c
include/: list.h
src/: list.c
